--- a/style.css
+++ b/style.css
@@ -59,10 +59,10 @@ footer {
     font-size: 0.8em;
 }
 body {
-  background-image: url('https://imgur.com/a/ByetZdN'); /* or absolute URL */
-  background-size: cover; /* Makes it fit the screen */
-  background-position: center; /* Centers the image */
-  background-repeat: no-repeat; /* Avoid repeating the image */
-  height: 100vh; /* Covers the full viewport height */
-  margin: 0; /* Removes default margin */
+    background-image: url('https://imgur.com/a/ByetZdN');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 100vh;
+    margin: 0;
 }
