--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ footer {
     font-size: 0.8em;
 }
 body {
-    background-image: url('https://imgur.com/a/ByetZdN');
+    background-image: url('https://i.imgur.com/lnQm0RN.jpeg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
