--- a/style.css
+++ b/style.css
@@ -8,8 +8,12 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh;
     text-align: center;
+    background-image: url('https://i.imgur.com/lnQm0RN.jpeg'); /* Direct image URL */
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    min-height: 100vh; /* Ensures body takes full height */
 }
 
 header {
