--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
+
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Noto Sans', sans-serif; /* Applying Noto Sans font */
     background-color: #282c34;
     color: #fff;
     margin: 0;
@@ -9,7 +10,7 @@ body {
     justify-content: center;
     align-items: center;
     text-align: center;
-    
+
     /* Background image properties */
     background-image: url('https://i.imgur.com/lnQm0RN.jpeg'); /* Direct image URL */
     background-size: cover;
@@ -22,6 +23,7 @@ body {
     position: relative;
 }
 
+/* Dark overlay to make text more readable */
 body::after {
     content: "";
     position: absolute;
@@ -78,12 +80,4 @@ button:hover {
 footer {
     margin-top: 30px;
     font-size: 0.8em;
-}
-body {
-    background-image: url('https://i.imgur.com/lnQm0RN.jpeg');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    height: 100vh;
-    margin: 0;
 }
