--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
-
 body {
-    font-family: 'Noto Sans', sans-serif; /* Applying Noto Sans font */
+    font-family: 'Noto Sans', sans-serif;
     background-color: #282c34;
     color: #fff;
     margin: 0;
@@ -10,20 +9,15 @@ body {
     justify-content: center;
     align-items: center;
     text-align: center;
-
-    /* Background image properties */
-    background-image: url('https://i.imgur.com/lnQm0RN.jpeg'); /* Direct image URL */
+    background-image: url('https://i.imgur.com/lnQm0RN.jpeg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     background-attachment: fixed;
     min-height: 100vh;
-
-    /* Overlay effect */
     position: relative;
 }
 
-/* Dark overlay to make text more readable */
 body::after {
     content: "";
     position: absolute;
@@ -31,8 +25,8 @@ body::after {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* Dark overlay with some transparency */
-    z-index: -1; /* Sends the overlay behind the content */
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: -1;
 }
 
 header {
@@ -66,7 +60,7 @@ input[type="email"] {
 button {
     padding: 10px 20px;
     font-size: 1em;
-    background-color: #f39c12;
+    background-color: #9b59b6; /* Purple color */
     color: white;
     border: none;
     border-radius: 5px;
@@ -74,7 +68,7 @@ button {
 }
 
 button:hover {
-    background-color: #e67e22;
+    background-color: #8e44ad; /* Darker purple for hover */
 }
 
 footer {
