--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
-
 /* General Styles */
 body {
     font-family: 'Noto Sans', sans-serif;
+    background-color: #282c34;
     color: #fff;
     margin: 0;
     padding: 0;
