--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
     margin: 0;
     padding: 0;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     text-align: center;
@@ -19,12 +20,8 @@ body::after {
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.6);
+    background-color: rgba(0, 0, 0, 0.6);
     z-index: -1;
-}
-
-header, footer {
-    text-align: center;
 }
 
 header {
@@ -50,21 +47,19 @@ form {
     align-items: center;
 }
 
-input[type="email"], button {
+input[type="email"] {
     padding: 10px;
     font-size: 1em;
+    margin-right: 10px;
     border-radius: 5px;
 }
 
-input[type="email"] {
-    margin-right: 10px;
-    border: none;
-}
-
 button {
+    padding: 10px 20px;
+    font-size: 1em;
     background-color: #9b59b6;
     color: white;
-    border: none;
+    border-radius: 5px;
     cursor: pointer;
 }
 
